# ai-slack-bot

./: .editorconfig  .gitignore  CLAUDE.md  README.md  docker-compose.yml  elasticmq.conf  pyrightconfig.json  taskfile.yml
agents/: .gitignore  main.py  pyproject.toml
agents/agent/: code_review.py  database.py  log.py  slack.py  state.py  user_proxy.py  workflow_manager.py
agents/client/: agent.py
agents/config/: common.py  database.py  model.py  prompt.py
agents/database/: agent.py  connection.py  query.py
agents/models/: anthropic.py  gemini.py  open_ai.py
agents/tools/: database.py  logger.py  mcp_client.py
agents/tools/schema/: github.json
ai_agent/: .env.example  Dockerfile  README.md  __init__.py  api.py  config.py  main.py  models.py  pyproject.toml  requirements.txt
ai_agent/agents/: __init__.py  db_agent.py  mcp_client.py  mcp_server.py
ai_agent/services/: __init__.py  db_service.py  notion_service.py  queue_service.py  slack_service.py
ai_agent_v2/langchain_mcp/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
ai_agent_v2/langchain_mcp/agents/: controller.py  database.py  github.py
ai_agent_v2/langchain_mcp/core/: __init__.py  alignment_agent.py  notion_agent.py  query_router.py  slack_agent.py  workflow_manager.py
ai_agent_v2/langchain_mcp/database/: __init__.py  agent.py
ai_agent_v2/langchain_mcp/examples/: db_query_example.py
ai_agent_v2/langchain_mcp/mcp_config/: controller.json.example  database.json.example  github.json.example  notion.json.example  slack.json.example
ai_agent_v2/langchain_mcp/models/: anthropic.py  gemini.py
ai_agent_v2/mcp-client/: .gitignore  README.md  client.py  config.py  pyproject.toml
ai_agent_v2/mcp-client/agents/: __init__.py  db_agent.py  github_agent.py  notion_agent.py  slack_agent.py
ai_agent_v2/mcp-client/core/: base.py  graph.py  session.py  utils.py
ai_agent_v2/mcp-client/database/: __init__.py  connection.py  query.py
ai_agent_v2/mcp-client/models/: anthropic.py  gemini.py
ai_agent_v2/mcp-client/services/: github.py  notion.py  slack.py
ai_agent_v2/mcp-client/tools/: handlers.py
migrations/: Dockerfile  README.md
migrations/schema/: 000001_create_slack_mentions_table.up.sql  000002_create_slack_mention_responses_table.up.sql  000003_create_users_table.down.sql  000003_create_users_table.up.sql  000004_create_user_emails_table.down.sql  000004_create_user_emails_table.up.sql  000005_create_tweets_table.down.sql  000005_create_tweets_table.up.sql  000006_create_user_accounts_table.down.sql  000006_create_user_accounts_table.up.sql  20250426000001_create_slack_mentions_table.down.sql  20250426000002_create_slack_mention_responses_table.down.sql
migrations/seed/: create_seed_data.sql
slack_bot/: README.md  go.mod  go.sum  main.go
slack_bot/bootstrap/: module.go
slack_bot/cmd/: main.go
slack_bot/config/: config.example.yml  config.go
slack_bot/pkg/domain/di/: slack_mention_repository.go
slack_bot/pkg/domain/interface/command/: slack_mention.go
slack_bot/pkg/domain/interface/query/: slack_mention.go
slack_bot/pkg/domain/model/slack/: mention.go
slack_bot/pkg/infra/entity/: slack_mention.go
slack_bot/pkg/infra/repository/: slack_mention.go
slack_bot/pkg/modules/: repository.go
