[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.50.0",
    "mcp>=1.7.1",
    "python-dotenv>=1.1.0",
    "google-generativeai>=0.3.2",
    "langchain>=0.1.5",
    "langchain-anthropic>=0.1.3",
    "langchain-google-genai>=0.0.5",
    "langchain-core>=0.1.26",
]
