[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.50.0",
    "mcp>=1.7.1",
    "python-dotenv>=1.1.0",
    "google-generativeai>=0.3.2",
    "langchain>=0.1.5",
    "langchain-anthropic>=0.1.3",
    "langchain-google-genai>=0.0.5",
    "langchain-core>=0.1.26",
    "langchain-community>=0.0.17",
    "sqlalchemy>=2.0.27",
    "mysqlclient>=2.2.1",
    "psycopg2-binary>=2.9.9",
    "mysql-connector-python>=9.3.0",
    "langgraph>=0.4.3",
]

[tool.black]
target-version = ['py311']
line-length = 80

[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
use_parentheses = true

[tool.ruff]
line-length = 88
ignore = []
select = ["ALL"]

# ファイルごとのエラー除外
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
# 除外するエラーの種類
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
